@@ -1,4 +1,5 @@
 Version - 2.6 - 09-21-15
+-Fixed an issued with fossilRecord2fossilRanges where a dataset with a single taxon resulted in a fatal error regarding an attempt to replace more elements than already exists
 -
 
 Version - 2.5 - 09-20-15
